--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
-    "square-connect": "^4.20200625.0"
+    "square-connect": "^4.20200625.0",
+    "stripe": "^8.69.0"
   }
 }
