--- a/back/package.json
+++ b/back/package.json
@@ -14,8 +14,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mercadopago": "^1.3.2",
+    "mercadopago": "^1.5.3",
     "nodemon": "^2.0.4",
+    "platform-folders": "^0.5.2",
     "square-connect": "^4.20200625.0",
     "stripe": "^8.69.0"
   }
